--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,50 @@
-numpy==1.24.4
+altair==5.2.0
+attrs==23.2.0
+backports.zoneinfo==0.2.1
+blinker==1.7.0
+cachetools==5.3.2
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+flask==3.0.2
+gitdb==4.0.11
+GitPython==3.1.42
+idna==3.6
+importlib-metadata==7.0.1
+importlib-resources==6.1.1
+itsdangerous==2.1.2
+Jinja2==3.1.3
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+mdurl==0.1.2
+packaging==23.2
+pandas==2.0.3
+pillow==10.2.0
+pkgutil-resolve-name==1.3.10
+protobuf==4.25.3
+pyarrow==15.0.0
+pydeck==0.8.1b0
+pygments==2.17.2
+python-dateutil==2.8.2
+pytz==2024.1
+referencing==0.33.0
+requests==2.31.0
+rich==13.7.0
+rpds-py==0.18.0
+six==1.16.0
+smmap==5.0.1
+tenacity==8.2.3
+toml==0.10.2
+toolz==0.12.1
+tornado==6.4
+typing-extensions==4.9.0
+tzdata==2024.1
+tzlocal==5.2
+urllib3==2.2.1
+validators==0.22.0
+watchdog==4.0.0
+werkzeug==3.0.1
+zipp==3.17.0
