--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 altair==5.2.0
 attrs==23.2.0
-backports.zoneinfo==0.2.1
+backports.zoneinfo;python_version<"3.9"
 blinker==1.7.0
 cachetools==5.3.2
 certifi==2024.2.2
